<resources>
    <string name="app_name">Inventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item">ITEM</string>
    <string name="quantity_in_stock">QUANTITY IN STOCK</string>
    <string name="price">PRICE</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="quantity_in_stock_hint">Quantity in Stock</string>
    <string name="quantity_detail">Quantity in Stock: %d</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="warning">All fields must bt filled</string>
    <string name="sell">Sell</string>
    <string name="delete">Delete</string>
    <string name="edit_item_button">Edit item button</string>
    <string name="add_product_title">Add Product</string>
    <string name="edit_product_title">Edit Item</string>
</resources>