<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".model.InventoryFragment"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewQuantityTitle"
        app:layout_constraintBottom_toBottomOf="@id/textViewQuantityTitle"/>

    <TextView
        android:id="@+id/textViewQuantityTitle"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/quantity_in_stock"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:lines="2"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/textViewQuantityTitle"
        app:layout_constraintTop_toTopOf="@id/textViewQuantityTitle"
        app:layout_constraintBottom_toBottomOf="@id/textViewQuantityTitle"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewQuantityTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/item"
        tools:itemCount="5"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:src="@drawable/ic_round_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@null" />

</androidx.constraintlayout.widget.ConstraintLayout>